# teanga.rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: app.yml  test.yml
src/: lib.rs  serialization.rs
teanga/: Cargo.toml
teanga-c4/: Cargo.toml  tag_corpus.py
teanga-c4/src/: main.rs
teanga-cli/: Cargo.toml  README.md  c4-header.yaml
teanga-cli/src/: main.rs
teanga-py/: Cargo.toml  README.md  pyproject.toml  requirements.txt
teanga-py/src/: cuac_py.rs  lib.rs  query.rs  serialization.rs  tcf_py.rs
teanga-py/tests/: test_corpus_methods.py  test_teanga_py.py
teanga-wasm/: Cargo.toml  build.sh  cargo.toml  readme.md
teanga-wasm/src/: lib.rs
teanga/src/: channel_corpus.rs  cuac.rs  disk_corpus.rs  document.rs  layer.rs  layer_builder.rs  lib.rs  match_condition.rs  query.rs  serialization.rs  simple_corpus.rs  tcf.rs  transaction_corpus.rs
teanga/src/cuac/: cuac_index.rs  data.rs  index.rs  layer.rs  read.rs  string.rs  type_index.rs  write.rs
teanga/src/tcf/: data.rs  index.rs  layer.rs  read.rs  string.rs  tcf.rs  tcf_index.rs  type_index.rs  write.rs
