[package]
name = "teanga-c4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
serde_json = "1.0.115"
teanga = { path = "../teanga" }
