[package]
name = "teanga-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.29"
serde_json = "1.0.116"
teanga = { path = "../teanga", features = ["sled"] }

[[bin]]
name = "teanga-cli"
path = "src/main.rs"
