[package]
name = "teanga-py"
version = "0.1.0"
edition = "2021"
include = [
    "/pyproject.toml",
    "/src"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teanga_pyo3"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
teanga = { path = "../teanga" }
pyo3 = "0.21.1"
sled = "0.34.7"
base64 = "*"
sha2 = "*"
itertools = "*"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.24"
ciborium = "0.2.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.2.0"
