[project]
name = "teanga_pyo3"
version = "0.1.0"
description = "Teanga - Rust Implementation"
authors = [{name="John P. McCrae",email="john@mccr.ae"}]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://github.com/teangaNLP/teanga.rs"

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "teanga_pyo3.teanga"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
