[package]
name = "teanga"
version = "0.1.0"
edition = "2021"
include = [
    "/pyproject.toml",
    "/src"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teanga"

[dependencies]
base64 = "*"
sha2 = "*"
itertools = "*"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.24"
ciborium = "0.2.1"
smaz = "0.1.0"
lru = "0.12.3"
regex = "1.10.5"
shoco = { git = "https://github.com/jmccrae/shoco", version = "0.1.0" }
fjall = "2.4.1"

[dev-dependencies]
tempfile = "3.2.0"
