[package]
name = "teanga"
version = "0.1.0"
edition = "2021"
include = [
    "/pyproject.toml",
    "/src"
]

[features]
default = []
sled = ["dep:sled"]
redb = ["dep:redb"]
fjall = ["dep:fjall"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teanga"

[dependencies]
sled = { version = "0.34.7", optional = true }
base64 = "*"
sha2 = "*"
itertools = "*"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.24"
ciborium = "0.2.1"
smaz = "0.1.0"
lru = "0.12.3"
regex = "1.10.5"
fjall = { version = "2.4.1", optional = true }
redb = { version = "2.3.0", optional = true }
shoco = { git = "https://github.com/jmccrae/shoco", version = "0.1.0" }
yaml-rust2 = "0.10.0"

[dev-dependencies]
tempfile = "3.2.0"

